--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ langchain>=0.1.0
 langchain-community>=0.0.20
 langchain-huggingface>=0.0.1
 langchain-chroma>=0.1.0
-langchain-ollama>=0.1.0
+langchain-groq>=0.1.0
 
 # Vector database
 chromadb>=0.4.0
